[tool.poetry]
name = "ibkrbox"
version = "0.3.0"
description = "box spread utility for interactive brokers"
documentation = "https://github.com/asemx/ibkrbox/blob/main/README.md"
authors = ["asemx <998264+asemx@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/asemx/ibkrbox"
repository = "https://github.com/asemx/ibkrbox.git"

[tool.poetry.dependencies]
python = "^3.8"
ib-insync = "^0.9.71"
click = "^8.1.3"
click-log = "^0.4.0"
pandas = "^1.5.1"

[tool.poetry.scripts]
ibkrbox = 'ibkrbox.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
